--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Invie</title>
+    <title>Invie Git Test</title>
     <style media="screen">
       body {
         margin: 0;
       }
       img {
-        max-width: 100%;
+        max-width: 80%;
         vertical-align: top;
       }
     </style>
